# motd-video-analyser

./: .gitignore  CLAUDE.md  COMMIT_STYLE.md  README.md  pyproject.toml  requirements.txt
.claude/commands/: code-review.md  issue-workflow.md  task-workflow.md
config/: config.yaml
data/episodes/: episode_manifest.json
data/fixtures/: premier_league_2025_26.json
data/ground_truth/: episode_boundaries.json
data/teams/: premier_league_2025_26.json
data/venues/: premier_league_2025_26.json
docs/: algorithm.md  analysis_reconnaissance_report.md  architecture.md  future-enhancements.md  motd_visual_patterns.md  prd.md  project-setup.md  roadmap.md  scene_detection_tuning_report.md  tech-tradeoffs.md
docs/domain/: README.md  business_rules.md
docs/ground_truth/: analysis.md  labeling_template.md  scene_mapping.md  validation_report_011c-2.md
docs/tasks/: 001-environment-setup.md  002-create-project-structure.md  003-install-python-dependencies.md  004-create-team-and-fixture-data.md  004-create-team-names-file.md  005-create-config-file.md  006-implement-scene-detector.md  007-implement-frame-extractor.md  (+8 more)
scripts/: analyze_match_boundaries.py  analyze_reconnaissance.py  debug_ocr_frame.py  generate_short_names.py  generate_short_names_v2.py  generate_short_names_v3.py  generate_short_names_v4.py  test_fixture_matcher.py  test_ocr.py  test_ocr_region.py  test_scene_501.py  test_team_matcher.py  visualize_ocr_regions.py
tests/: debug_frame_2214.py  test_audio_extractor.py  test_transcription_integration.py  test_venue_matcher.py  test_whisper_transcriber.py
(+110 files in other folders)
